# case_study

./: .black.toml  .cascade.js  .cursorconfig.json  .cursorignore  .cursorindexingignore  .cz.toml  .dockerignore  .gitattributes  .gitignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  .pytest.ini  .readthedocs.yaml  .ruff.toml  Dockerfile  LICENSE  README.md  nox.toml  noxfile.py  pyproject.toml  requirements.txt  train.py
.windsurf/rules/: design.md  experiments.md
.windsurf/rules/general/: documentation.md  marimo.md  ml.md  project_management.md  python.md  python_tools.md
data/dev_data/: dev_data_batch_1
data/imagenet64/dev_data/: dev_data_batch_1
data/imagenet64/train_data/: train_data_batch_1  train_data_batch_2  train_data_batch_3
data/train_data/: train_data_batch_1  train_data_batch_2  train_data_batch_4  train_data_batch_6
experiments/data/train_data/: train_data_batch_10  train_data_batch_3  train_data_batch_5  train_data_batch_7  train_data_batch_8  train_data_batch_9
experiments/docs/: DESIGN.md  REPORT.md  final_report.md  report_template.md
experiments/notebooks/: evaluation.ipynb
experiments/notebooks/notebooks/: fragment_reconstruction_pipeline.ipynb
experiments/scripts/: evaluate_figures.py  train.py
notebooks/: data_exploration.ipynb  evaluation.ipynb  fragment_inference.ipynb
outputs/fragment_clustering_baseline/results/: fragment_inference_exec.ipynb  metrics.json
outputs/fragment_clustering_baseline/results/outputs/fragment_clustering_baseline/results/: notebook_metrics.json
outputs/full_training/training_logs/version_1/: hparams.yaml
outputs/full_training/training_logs/version_2/: hparams.yaml
src/: __init__.py
src/study/: __init__.py  data.py  datasets.py  download.py  fragmentation.py  models.py  models_autoenc.py  modules.py  train_module.py  trainer.py  transforms.py
